--- a/.github/workflows/process_gameplay_clip.yml
+++ b/.github/workflows/process_gameplay_clip.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.9' # Utilisation de la même version que le repo principal
+        python-version: '3.9'
 
     - name: Install system dependencies (ffmpeg, ImageMagick)
       run: |
@@ -27,7 +27,6 @@ jobs:
         
         sudo cp $POLICY_FILE ${POLICY_FILE}.bak
         
-        # Correction : Utilisation de '#' comme délimiteur pour sed
         sudo sed -i 's#<policy domain="\([^"]*\)" rights="none" pattern="\([^"]*\)"\/>#<policy domain="\1" rights="read|write" pattern="\2"\/>#g' $POLICY_FILE
         
         sudo sed -i '/<policy domain="coder" rights="none" pattern="[^"]*"\/>/d' $POLICY_FILE
@@ -37,10 +36,15 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt # Installation à partir de votre fichier requirements.txt
+        pip install -r requirements.txt
 
+    - name: Debug: Check script file and permissions
+      run: |
+        ls -l process_gameplay_clip.py
+        echo "Starting the Python script..."
+      
     - name: Run video processing script
-      run: python process_gameplay_clip.py
+      run: python process_gameplay_clip.py 2>&1
       
     - name: Upload video artifact
       uses: actions/upload-artifact@v4
