--- a/.github/workflows/process_gameplay_clip.yml
+++ b/.github/workflows/process_gameplay_clip.yml
@@ -38,7 +38,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Debug: Check script file and permissions
+    - name: Debug: Check script file and permission
       run: |
         ls -l process_gameplay_clip.py
         echo "Starting the Python script..."
@@ -50,4 +50,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: processed-gameplay-short
-        path: output_test/short_gameplay_test.mp4
+        path: output_test/short_gameplay_test.mp
