--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-requests
-yt-dlp
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-moviepy==1.0.3
-Pillow==9.5.0
+moviepy>=1.0.3
+imageio[ffmpeg]  # pour s'assurer que MoviePy peut encoder avec FFmpeg
