--- a/.github/workflows/process_gameplay_clip.yml
+++ b/.github/workflows/process_gameplay_clip.yml
@@ -1,8 +1,3 @@
-name: Génération de clip vertical
-
-on:
-  workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,13 +11,18 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: 🧱 Installer les dépendances
+      - name: 🧱 Installer les dépendances Python
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: 🎞️ Installer FFmpeg
         run: sudo apt-get update && sudo apt-get install -y ffmpeg
+
+      - name: 🎨 Installer ImageMagick et activer les droits
+        run: |
+          sudo apt-get update && sudo apt-get install -y imagemagick libmagick++-dev
+          sudo sed -i 's/rights="none"/rights="read|write"/g' /etc/ImageMagick-6/policy.xml
 
       - name: ✅ Vérifier la présence de la vidéo source
         run: |
